--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QeL-7X-GbG">
+                                <rect key="frame" x="0.0" y="133" width="414" height="729"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oLV-g2-M2A">
+                                        <rect key="frame" x="0.0" y="26" width="414" height="596"/>
+                                        <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Yg-bf-5nG">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.54745191749211353" green="0.83142414238200291" blue="0.95929333116068982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="oLV-g2-M2A" firstAttribute="leading" secondItem="QeL-7X-GbG" secondAttribute="leading" id="QSE-uo-8A4"/>
+                                    <constraint firstItem="oLV-g2-M2A" firstAttribute="top" secondItem="QeL-7X-GbG" secondAttribute="top" constant="26" id="b3q-v3-Hgj"/>
+                                    <constraint firstAttribute="trailing" secondItem="oLV-g2-M2A" secondAttribute="trailing" id="h90-S2-xT3"/>
+                                    <constraint firstAttribute="bottom" secondItem="oLV-g2-M2A" secondAttribute="bottom" constant="107" id="nao-UZ-z0V"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favoritos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpg-8n-6IZ">
+                                <rect key="frame" x="135" y="79" width="145" height="45.5"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="35"/>
+                                <color key="textColor" systemColor="systemYellowColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" systemColor="tintColor"/>
+                                <size key="shadowOffset" width="2" height="0.0"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u5i-vv-aMc">
+                                <rect key="frame" x="337" y="67" width="50" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="2Er-Gl-TPk"/>
+                                    <constraint firstAttribute="width" constant="50" id="aJ8-Xo-LEr"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="pokemon-trainer__1_-removebg-preview 1" title=""/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <constraints>
+                            <constraint firstItem="QeL-7X-GbG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QOJ-7d-zPA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u5i-vv-aMc" secondAttribute="trailing" constant="27" id="SPD-e7-QPD"/>
+                            <constraint firstItem="QeL-7X-GbG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ulr-lV-KsG"/>
+                            <constraint firstItem="u5i-vv-aMc" firstAttribute="leading" secondItem="zpg-8n-6IZ" secondAttribute="trailing" constant="57" id="XTu-J6-nTX"/>
+                            <constraint firstItem="zpg-8n-6IZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="135" id="dZG-oi-JDl"/>
+                            <constraint firstItem="u5i-vv-aMc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="23" id="dzG-C5-thG"/>
+                            <constraint firstItem="zpg-8n-6IZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="itc-dF-ye6"/>
+                            <constraint firstItem="QeL-7X-GbG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lud-YE-4i7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zpg-8n-6IZ" secondAttribute="trailing" constant="134" id="ni5-gN-uJp"/>
+                            <constraint firstItem="QeL-7X-GbG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="pli-7z-7jG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="favoritesCollectionView" destination="oLV-g2-M2A" id="yLC-nA-5TO"/>
+                        <outlet property="favoritesLabel" destination="zpg-8n-6IZ" id="XSE-xk-fKF"/>
+                        <outlet property="favoritesView" destination="QeL-7X-GbG" id="b0h-WN-ccl"/>
+                        <outlet property="profileButton" destination="u5i-vv-aMc" id="KBD-PH-fxD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="69.642857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pokemon-trainer__1_-removebg-preview 1" width="26" height="27"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
