--- a/Pokedex/favoritesCollectionViewCell/favoritesCollectionViewCell.xib
+++ b/Pokedex/favoritesCollectionViewCell/favoritesCollectionViewCell.xib
@@ -1,21 +1,80 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="favoritesCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="favoritesCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXy-0U-wU8">
+                        <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MOm-qk-cSu">
+                                <rect key="frame" x="24" y="4" width="110" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="RjL-PB-cUS"/>
+                                    <constraint firstAttribute="height" constant="110" id="wZa-RP-czW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lapras" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSu-ZS-aE5">
+                                <rect key="frame" x="139" y="4" width="90.5" height="39"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nº131" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bxl-Zd-RVM">
+                                <rect key="frame" x="139" y="46" width="59" height="26"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SVH-vY-N4B">
+                                <rect key="frame" x="142" y="80" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="rMw-ZC-SRA"/>
+                                    <constraint firstAttribute="height" constant="30" id="ube-KD-gm5"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MOm-qk-cSu" firstAttribute="leading" secondItem="vXy-0U-wU8" secondAttribute="leading" constant="24" id="7pv-Is-Oq8"/>
+                            <constraint firstItem="kSu-ZS-aE5" firstAttribute="leading" secondItem="MOm-qk-cSu" secondAttribute="trailing" constant="5" id="BZk-AZ-4vF"/>
+                            <constraint firstItem="MOm-qk-cSu" firstAttribute="top" secondItem="vXy-0U-wU8" secondAttribute="top" constant="4" id="Qnx-tp-duj"/>
+                            <constraint firstItem="SVH-vY-N4B" firstAttribute="leading" secondItem="MOm-qk-cSu" secondAttribute="trailing" constant="8" symbolic="YES" id="TZ2-iB-hHW"/>
+                            <constraint firstItem="kSu-ZS-aE5" firstAttribute="top" secondItem="vXy-0U-wU8" secondAttribute="top" constant="4" id="mwS-DH-uva"/>
+                            <constraint firstItem="SVH-vY-N4B" firstAttribute="top" secondItem="Bxl-Zd-RVM" secondAttribute="bottom" constant="8" symbolic="YES" id="rHJ-YQ-VCI"/>
+                            <constraint firstItem="Bxl-Zd-RVM" firstAttribute="top" secondItem="kSu-ZS-aE5" secondAttribute="bottom" constant="3" id="wlk-11-cKc"/>
+                            <constraint firstItem="Bxl-Zd-RVM" firstAttribute="leading" secondItem="MOm-qk-cSu" secondAttribute="trailing" constant="5" id="zam-OJ-bbe"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="vXy-0U-wU8" secondAttribute="trailing" id="2hN-ar-0DZ"/>
+                <constraint firstItem="vXy-0U-wU8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="FGp-GM-hoB"/>
+                <constraint firstItem="vXy-0U-wU8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="TYE-5h-4Jd"/>
+                <constraint firstAttribute="bottom" secondItem="vXy-0U-wU8" secondAttribute="bottom" id="iqZ-j2-ASF"/>
+            </constraints>
+            <size key="customSize" width="357" height="119"/>
+            <point key="canvasLocation" x="126.81159420289856" y="102.79017857142857"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
