--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="133" width="414" height="729"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oLV-g2-M2A">
-                                        <rect key="frame" x="0.0" y="26" width="414" height="596"/>
+                                        <rect key="frame" x="0.0" y="30" width="414" height="699"/>
                                         <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Yg-bf-5nG">
                                             <size key="itemSize" width="128" height="128"/>
@@ -34,13 +34,13 @@
                                 <color key="backgroundColor" red="0.54745191749211353" green="0.83142414238200291" blue="0.95929333116068982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="oLV-g2-M2A" firstAttribute="leading" secondItem="QeL-7X-GbG" secondAttribute="leading" id="QSE-uo-8A4"/>
-                                    <constraint firstItem="oLV-g2-M2A" firstAttribute="top" secondItem="QeL-7X-GbG" secondAttribute="top" constant="26" id="b3q-v3-Hgj"/>
+                                    <constraint firstItem="oLV-g2-M2A" firstAttribute="top" secondItem="QeL-7X-GbG" secondAttribute="top" constant="30" id="b3q-v3-Hgj"/>
                                     <constraint firstAttribute="trailing" secondItem="oLV-g2-M2A" secondAttribute="trailing" id="h90-S2-xT3"/>
-                                    <constraint firstAttribute="bottom" secondItem="oLV-g2-M2A" secondAttribute="bottom" constant="107" id="nao-UZ-z0V"/>
+                                    <constraint firstAttribute="bottom" secondItem="oLV-g2-M2A" secondAttribute="bottom" id="nao-UZ-z0V"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favoritos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpg-8n-6IZ">
-                                <rect key="frame" x="135" y="79" width="145" height="45.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favoritos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpg-8n-6IZ">
+                                <rect key="frame" x="115" y="79" width="184" height="45.5"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="35"/>
                                 <color key="textColor" systemColor="systemYellowColor"/>
                                 <nil key="highlightedColor"/>
@@ -64,12 +64,11 @@
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QOJ-7d-zPA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u5i-vv-aMc" secondAttribute="trailing" constant="27" id="SPD-e7-QPD"/>
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ulr-lV-KsG"/>
-                            <constraint firstItem="u5i-vv-aMc" firstAttribute="leading" secondItem="zpg-8n-6IZ" secondAttribute="trailing" constant="57" id="XTu-J6-nTX"/>
-                            <constraint firstItem="zpg-8n-6IZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="135" id="dZG-oi-JDl"/>
+                            <constraint firstItem="zpg-8n-6IZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="dZG-oi-JDl"/>
                             <constraint firstItem="u5i-vv-aMc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="23" id="dzG-C5-thG"/>
                             <constraint firstItem="zpg-8n-6IZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="itc-dF-ye6"/>
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lud-YE-4i7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zpg-8n-6IZ" secondAttribute="trailing" constant="134" id="ni5-gN-uJp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zpg-8n-6IZ" secondAttribute="trailing" constant="115" id="ni5-gN-uJp"/>
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="pli-7z-7jG"/>
                         </constraints>
                     </view>
