--- a/Pokedex/favoritesCollectionViewCell/favoritesCollectionViewCell.xib
+++ b/Pokedex/favoritesCollectionViewCell/favoritesCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="favoritesCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="favoritesCollectionViewCell" id="gTV-IL-0wX" customClass="favoritesCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXy-0U-wU8">
                         <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MOm-qk-cSu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="laprasfavo" translatesAutoresizingMaskIntoConstraints="NO" id="MOm-qk-cSu">
                                 <rect key="frame" x="24" y="4" width="110" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="RjL-PB-cUS"/>
@@ -39,7 +39,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SVH-vY-N4B">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024px-Pokémon_Water_Type_Icon 5" translatesAutoresizingMaskIntoConstraints="NO" id="SVH-vY-N4B">
                                 <rect key="frame" x="142" y="80" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="rMw-ZC-SRA"/>
@@ -69,10 +69,19 @@
                 <constraint firstAttribute="bottom" secondItem="vXy-0U-wU8" secondAttribute="bottom" id="iqZ-j2-ASF"/>
             </constraints>
             <size key="customSize" width="357" height="119"/>
-            <point key="canvasLocation" x="126.81159420289856" y="102.79017857142857"/>
+            <connections>
+                <outlet property="cellBackgroundView" destination="vXy-0U-wU8" id="CT4-5X-QST"/>
+                <outlet property="pokemonImageView" destination="MOm-qk-cSu" id="bse-1m-iLo"/>
+                <outlet property="pokemonNameLabel" destination="kSu-ZS-aE5" id="hG9-pZ-OkC"/>
+                <outlet property="pokemonNumberLabel" destination="Bxl-Zd-RVM" id="BsA-P1-GYB"/>
+                <outlet property="pokemonTypeImageView" destination="SVH-vY-N4B" id="A5m-RM-6me"/>
+            </connections>
+            <point key="canvasLocation" x="322" y="107"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="1024px-Pokémon_Water_Type_Icon 5" width="28" height="27"/>
+        <image name="laprasfavo" width="125" height="125"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
