--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gco-Cn-b2B">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Favoritos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QeL-7X-GbG">
-                                <rect key="frame" x="0.0" y="133" width="414" height="729"/>
+                                <rect key="frame" x="0.0" y="133" width="414" height="680"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oLV-g2-M2A">
-                                        <rect key="frame" x="0.0" y="30" width="414" height="699"/>
+                                        <rect key="frame" x="0.0" y="30" width="414" height="650"/>
                                         <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Yg-bf-5nG">
                                             <size key="itemSize" width="128" height="128"/>
@@ -72,6 +72,7 @@
                             <constraint firstItem="QeL-7X-GbG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="pli-7z-7jG"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Favoritos" image="favoritos" id="LZq-lk-xGF"/>
                     <connections>
                         <outlet property="favoritesCollectionView" destination="oLV-g2-M2A" id="yLC-nA-5TO"/>
                         <outlet property="favoritesLabel" destination="zpg-8n-6IZ" id="XSE-xk-fKF"/>
@@ -81,11 +82,51 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="69.642857142857139"/>
+            <point key="canvasLocation" x="512" y="125"/>
+        </scene>
+        <!--My Tab Bar Constroller-->
+        <scene sceneID="5mX-Rc-hSQ">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Gco-Cn-b2B" customClass="MyTabBarConstroller" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fkA-lB-obR">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Gln-a1-rqJ"/>
+                        <segue destination="JS8-oE-Ry0" kind="relationship" relationship="viewControllers" id="0Hq-g0-Fmw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qVt-lf-1Mp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-281" y="125"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="RmS-Ve-fbK">
+            <objects>
+                <viewController id="JS8-oE-Ry0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wkZ-hh-YJ7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="daF-of-I0N"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="yjH-KM-9pJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zlH-A4-WVU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="512" y="814"/>
         </scene>
     </scenes>
     <resources>
+        <image name="favoritos" width="53" height="50"/>
+        <image name="home" width="48" height="45"/>
         <image name="pokemon-trainer__1_-removebg-preview 1" width="26" height="27"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
